# RAG-FAQ-Chatbot

./: .gitignore
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/data/processed/: faqs.json
backend/src/: __init__.py  app.py
backend/src/api/: deps.py  routes.py  schemas.py
backend/src/core/: config.py  errors.py
backend/src/domain/: models.py
backend/src/indexing/: build_index.py  embeddings.py  vector_store.py
backend/src/ingestion/: cleaners.py  parse_faq.py  scrape_faq.py
backend/src/rag/: __init__.py  generator.py  orchestrator.py  prompt_builder.py  retriever.py
backend/src/utils/: hashing.py  io.py  text.py
backend/tests/: test_api.py  test_generator.py  test_indexing.py  test_ingestion.py  test_retriever.py
frontend/: .env.example  README.md  app.py  requirements.txt
frontend/src/core/: config.py  errors.py  state.py
frontend/src/domain/: models.py
frontend/src/services/: backend_client.py
frontend/src/ui/: components.py  layout.py  theme.py
frontend/src/utils/: formatters.py  validators.py
frontend/tests/: test_app_smoke.py  test_backend_client.py  test_validators.py
